[package]
name = "digu"
version = "0.0.7"
edition = "2021"
authors = ["Umran Hussein <umran.hussein@gmail.com>"]
description = "a digu engine written in rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
rand = "0.5.0"
dialoguer = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"